Styling changes 04 Aug

--- a/app/ParentJobDetails.css
+++ b/app/ParentJobDetails.css
@@ -3,7 +3,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 @import url("https://use.typekit.net/nio8yxa.css");
 
+img{
+    max-width: 100%;
+    height: auto;
+}
+h2{
+    text-align: center;
+}
+.contact-info-details a{
+    text-decoration: none;
+ }
+ ul.contact-info-details{
+ list-style-type: none;
+}
+main{
+    padding-bottom: 2rem;
+}
 
+.top-img img{
+    object-fit: cover;
+}
 .job-details-main{
     padding: 1rem;
 }
@@ -48,15 +67,24 @@
     color: gold;
 }
 
-
+#ratingCountDisplay{
+    padding: 0 1rem;
+}
+.reviews-display{
+    display: flex;
+    flex-flow: row nowrap;
+}
 ul#reviewsDisplay {
     padding: 0;
     margin: 0;
+    display: flex;
+    list-style-type: none;
 }
 
 ul#reviewsDisplay > * {
     padding: 1rem;
     margin: 0;
+    
 }
 
 .ratings-button{
@@ -73,13 +101,16 @@ ul#reviewsDisplay > * {
 }
 
 
+
+
 .job-details-buttons button{
     border-radius: 40px;
-    padding: 1rem 2rem;
+    padding: 0.5rem 1rem;
     color: white;
     background-color: #FF435B;
     margin-right: 2rem;
     font-size: 21px;
+    border: 1px solid #FF435B;
 }
 .navigation-button{
     display: flex;
@@ -97,6 +128,7 @@ ul.schedule-display-list {
     display: block;
     list-style-type: none;
     padding: 0;
+    margin-bottom: 2rem;
 }
 
 .schedule-display-list li{
@@ -112,15 +144,80 @@ ul.schedule-display-list {
     font-size: 1.25rem;
 }
 
-
-
-.calculation{
-    flex: 1 0 100%;
+.fa-phone,
+.fa-envelope {
+    color: #2CAB80;
+    font-size: 1.2rem;
+    padding-right: 6px;
 }
+
+.calculation {
+    background-color: rgba(255, 255, 255);
+
+}
+
+
+.calculation-box {
+    background-color: rgba(16, 75, 158, 0.1);
+    padding: 2rem;
+    border-radius: 20px;
+}
+
+
+.calculate {
+    display: flex;
+    flex-flow: column nowrap;
+    max-width: 350px;
+}
+
+.calculate input[type=number] {
+    margin-bottom: 1rem;
+    background-color: #fff;
+    border-radius: 1rem;
+    border: none;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.25);
+    padding: 0.5rem;
+}
+
+.calculate label {
+    font-family: new-atten;
+    color: rgb(16, 75, 158);
+    font-weight: 600;
+    margin-bottom: .2rem;
+}
+
+.calcBtn {
+    background-color: rgb(16, 75, 158);
+    color: white;
+    border-radius: 20px;
+    padding: 0.4rem;
+    border: 1px solid rgb(16, 75, 158);
+}
+
+.calcBtn:hover {
+    background-color: white;
+    color: rgb(16, 75, 158);
+}
+
+
+.total-output ul {
+    list-style-type: none;
+}
+
+.calculation h2 {
+    font-family: "fredoka one";
+    font-weight: 50;
+    color: rgb(16, 75, 158);
+}
+
+.job-details-container{
+    display: grid;
+}
+
 
 /* ______________END MAIN______________ */
 
-@media screen and (min-width: 700px ) {
+@media screen and (min-width: 1000px ) {
 
 
     /* ..........MAIN........ */
@@ -129,6 +226,16 @@ ul.schedule-display-list {
         flex-flow: row wrap;
         justify-content: flex-start;
         gap: 2rem;
+    }
+
+    .contact-info-details {
+        background-color: rgba(16, 75, 158, 0.1);
+        border-radius: 20px;
+        margin: 2rem 0;
+      
+        padding: 2rem 40rem 1rem 1rem;
+        font-size: 1.25rem;
+    
     }
 
     .job-details-container{
@@ -145,7 +252,7 @@ ul.schedule-display-list {
     .job-details-main img{
         flex: 0 0 30%;
         width: 20%;
-        height: auto;
+        align-self: center;
     }
 
     .job-post-details{
@@ -156,8 +263,9 @@ ul.schedule-display-list {
     }
 
     ul.contact-info-details{
-        list-style-type: none;
-        padding: 2rem 0 0 0;margin: 0;
-        font-size: 1.25rem;
+        
+    }
+    .job-details-container{
+        grid-template-columns: 5fr 1fr;
     }
 }
