--- a/app/SignUp.css
+++ b/app/SignUp.css
@@ -13,6 +13,10 @@ input {
     border: none;
 }
 
+img{
+    max-width: 100%;
+    height: auto;
+}
 
 ::placeholder {
     color: rgba(0, 0, 0, .5);
