--- a/app/NannyProfileList.css
+++ b/app/NannyProfileList.css
@@ -11,7 +11,7 @@ img {
 }
 
 .top-img {
-    background: url('/app/site-images/nanny-profile-list-top.png');
+    background: url('site-images/nanny-profile-list-top.png');
     padding: 10rem;
     background-repeat: no-repeat;
     box-sizing: border-box;
@@ -79,6 +79,7 @@ img {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 1rem;
+    margin-top: 2rem;
 }
 
 
@@ -115,5 +116,6 @@ ul.reviewsDisplay>* {
         max-width: 700px;
         gap: 1rem;
         justify-content: center;
+
     }
 }
