--- a/app/NannyProfileDetails.css
+++ b/app/NannyProfileDetails.css
@@ -17,6 +17,15 @@ ul#reviewsDisplay {
 
 }
 
+img#nannyProfileImage {
+    border-radius: 10%;
+    width: 25rem;
+    height: 25rem;
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 ul#reviewsDisplay li {
     display: inline;
@@ -116,6 +125,7 @@ main {
     margin-left: auto;
     margin-right: auto;
     font-family: new-atten;
+    padding-top: 2rem;
 }
 
 main h1 {
@@ -250,5 +260,13 @@ main h1 {
 
     .calculation {
         align-content: flex-start;
+    }
+
+    img#nannyProfileImage {
+        border-radius: 10%;
+        width: 25rem;
+        height: 25rem;
+        object-fit: cover;
+        margin: 0;
     }
 }
