--- a/app/Help.css
+++ b/app/Help.css
@@ -4,12 +4,10 @@ h2 {
     font-family: 'Fredoka One', cursive;
     color: #104B9E;
 }
-
-img {
-    width: 100%;
-    height: 214px;
+.banner img{
+    max-width: 100%;
+    height: auto;
     object-fit: cover;
-
 }
 
 p {
@@ -130,8 +128,12 @@ a {
 /* Accordion styles */
 .tabs {
     border-radius: 8px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
     overflow: hidden;
-    box-shadow: 0 4px 4px -2px rgba(233, 166, 166, 0.5);
+    /* box-shadow: 0 4px 4px -2px rgba(233, 166, 166, 0.5); */
+    box-shadow: 0 4px 4px -2px rgb(233 166 166 / 50%);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .tab {
